@@ -1,5 +1,6 @@
 package com.uid2.admin.auth;
 
+import com.okta.jwt.IdTokenVerifier;
 import io.vertx.core.Vertx;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.auth.oauth2.OAuth2Auth;
@@ -11,16 +12,39 @@ import com.okta.jwt.AccessTokenVerifier;
 import com.okta.jwt.JwtVerifiers;
 import static com.uid2.admin.auth.AuthUtil.isAuthDisabled;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Collections;
 
 public class OktaAuthProvider implements AuthProvider {
+    public static final String OKTA_AUTH_SERVER = "okta_auth_server";
+    public static final String OKTA_AUDIENCE = "okta_audience";
+    public static final String OKTA_CLIENT_ID = "okta_client_id";
+    public static final String OKTA_CLIENT_SECRET = "okta_client_secret";
+    public static final String OKTA_CALLBACK = "okta_callback";
     private final JsonObject config;
-    private List<String> scopes = Collections.unmodifiableList(Arrays.asList("openid",  "profile" ,"email" ,"groups"));
-
+    private final List<String> scopes = List.of("openid", "email", "uid2.admin.human");
+    private final AccessTokenVerifier accessTokenVerifier;
+    private final IdTokenVerifier idTokenVerifier;
     public OktaAuthProvider(JsonObject config) {
         this.config = config;
+        if(isAuthDisabled(config)) {
+            this.accessTokenVerifier = null;
+            this.idTokenVerifier = null;
+            return;
+        }
+        this.accessTokenVerifier = JwtVerifiers.accessTokenVerifierBuilder()
+                .setIssuer(config.getString(OKTA_AUTH_SERVER))
+                .setAudience(config.getString(OKTA_AUDIENCE))
+                .setConnectionTimeout(Duration.ofSeconds(1))
+                .setRetryMaxAttempts(2)
+                .setRetryMaxElapsed(Duration.ofSeconds(10))
+                .build();
+        this.idTokenVerifier = JwtVerifiers.idTokenVerifierBuilder()
+                .setClientId(config.getString(OKTA_CLIENT_ID))
+                .setIssuer(config.getString(OKTA_AUTH_SERVER))
+                .setConnectionTimeout(Duration.ofSeconds(1))
+                .setRetryMaxAttempts(2)
+                .setRetryMaxElapsed(Duration.ofSeconds(10))
+                .build();
     }
 
     @Override
@@ -30,30 +54,30 @@ public class OktaAuthProvider implements AuthProvider {
             return new NoopAuthHandler();
         }
 
-        OAuth2Auth oktaAuth = OAuth2Auth.create(vertx, 
+        OAuth2Auth oktaAuth = OAuth2Auth.create(vertx,
         new OAuth2Options()
-            .setClientId(this.config.getString("okta_client_id"))
-            .setClientSecret(this.config.getString("okta_client_secret"))
-            .setSite(String.format("%soauth2/",  this.config.getString("okta_issuer")))
+            .setClientId(this.config.getString(OKTA_CLIENT_ID))
+            .setClientSecret(this.config.getString(OKTA_CLIENT_SECRET))
+            .setSite(this.config.getString(OKTA_AUTH_SERVER))
             .setTokenPath("/v1/token")
             .setAuthorizationPath("/v1/authorize")
             .setUserInfoPath("/v1/userinfo")
         );
-        OAuth2AuthHandler authHandler = OAuth2AuthHandler.create(vertx, oktaAuth, this.config.getString("okta_callback"));
+        OAuth2AuthHandler authHandler = OAuth2AuthHandler.create(vertx, oktaAuth, this.config.getString(OKTA_CALLBACK));
         authHandler.extraParams(new JsonObject(String.format("{\"scope\":\"%s\"}", String.join(" ", this.scopes))));
         authHandler.setupCallback(callbackRoute);
-        return authHandler;   
+        return authHandler;
+    }
+
+
+    @Override
+    public AccessTokenVerifier getAccessTokenVerifier() {
+        return this.accessTokenVerifier;
     }
 
     @Override
-    public AccessTokenVerifier createTokenVerifier() {
-        return JwtVerifiers.accessTokenVerifierBuilder()
-            .setIssuer(this.config.getString("okta_issuer"))
-            .setAudience(this.config.getString("okta_client_id"))                   
-            .setConnectionTimeout(Duration.ofSeconds(1))
-            .setRetryMaxAttempts(2) 
-            .setRetryMaxElapsed(Duration.ofSeconds(10))
-            .build();
+    public IdTokenVerifier getIdTokenVerifier() {
+        return this.idTokenVerifier;
     }
 
     @Override
